# work-leaf

./: AGENTS.md  Cargo.toml  Readme.md  Spec.md  bench-dashboard  bench-three-features  bench-three-features-codex-common  bench-three-features-sequential  bench-three-features-worktree  build-target  orchestrator-interference-fixes.md  smoke-three-features  stale-snapshot-autorebase.md  start
bench-results/: 20260609T151406+0200-three-feature-bench.md  20260610T042015+0200-three-feature-bench-interim-baseline.md  20260610T044315+0200-three-feature-bench-aborted.md  20260610T060118+0200-three-feature-bench.md  20260610T065414+0200-three-feature-bench.md  20260610T152953+0200-three-feature-bench.md  20260610T194209+0200-three-feature-sequential-bench.md  20260610T194209+0200-three-feature-worktree-bench.md  20260610T204700+0200-three-feature-direct-comparison.md  20260610T204700+0200-three-feature-worktree-bench.md  20260611T003501+0200-three-feature-bench.md  20260611T014750+0200-three-feature-bench-supervisor.command  20260611T014750+0200-three-feature-bench.md  20260611T104137+0200-three-feature-bench.md  20260611T113324+0200-three-feature-bench.md  20260613T151146+0200-three-feature-bench.md  three-feature-bench.jsonl  three-feature-sequential-bench.jsonl  three-feature-worktree-bench.jsonl
docs/: acceptance-checklist.md  architecture.md  orchestrator-file-workflow.md  ui-requirements.md
examples/: ui_harness.rs
leaf-blame/: README.md
src/: agent.rs  agent_runtime.rs  chat_title.rs  claude.rs  cli.rs  codex.rs  codex_sdk_sidecar.py  http_controller.rs  lib.rs  (+11 more)
(+380 files in other folders)
