[package]
name = "work-leaf"
version = "0.1.1"
edition = "2024"

[lib]
name = "work_leaf"
path = "src/lib.rs"

[[bin]]
name = "work-leaf"
path = "src/bin/work-leaf.rs"

[[bin]]
name = "work-leaf-orchestrator"
path = "src/bin/work-leaf-orchestrator.rs"

[dependencies]
rustyline = { version = "18.0.0", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tui = { version = "0.19.0", default-features = false }
